ADDED Categories list

--- a/app.json
+++ b/app.json
@@ -27,6 +27,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "A marketplace for selling the stuff you don't need anymore."
   }
 }
+ 
